--- a/inc/3-analyze.tex
+++ b/inc/3-analyze.tex
@@ -208,6 +208,6 @@
 
 Перечисленные выше принципы обладают высокой степенью общности.
 Такая интерпретация может привести к обоснованному выводу о незначимости какого-либо принципа.
-Однако знание и учет принципов позволяет лучше увидеть существенные стороны решаемой проблемы, учесть весь комплекс взаимосвязей, обеспечить системную интеграцию.
+Однако, знание и учет принципов позволяет лучше увидеть существенные стороны решаемой проблемы, учесть весь комплекс взаимосвязей, обеспечить системную интеграцию.
 
 \clearpage
