--- a/inc/5-adminguide.tex
+++ b/inc/5-adminguide.tex
@@ -1,6 +1,6 @@
 \section{Руководство администратора}
 
-Руководство администратора содержит инфорамацию о сетевой инфраструктуре, об используемых технологиях виртуализации и программном обеспечении.
+Руководство администратора содержит инфорамацию о сетевой инфраструктуре, используемых технологиях виртуализации и программном обеспечении.
 
 \subsection{Расположение серверов в сетевой инфраструктуре}
 Во всей инфраструктуре на физических серверах первого дата-центра располагаются:
@@ -27,7 +27,7 @@
 Сервер shared-хостинга является самым уязвимым местом всей инфраструктуры из-за большого количества и плотности клиентов на сервере.
 Распределение ресурсов между пользователями происходит за счет встроенных в ядро Linux механизмов.
 
-Стоит отметить что после переезда на новый сервер для хранения данных доступен RAID-массив из SSD дисков объемом 1 Тб.
+Стоит отметить, что после переезда на новый сервер для хранения данных доступен RAID-массив из SSD дисков объемом 1 Тб.
 
 На сервере установлен и настроен веб-сервер в составе следующего ПО:
 \begin{itemize}
@@ -134,7 +134,7 @@ done
 exit 0
 \end{lstlisting}
 
-Основные конфигурации настроек веб-сервера хранятся в:
+Основные конфигурации настроек веб-сервера хранятся в файлах:
 \begin{itemize}
   \item /etc/nginx/nginx.conf;
   \item /etc/apache2/apache2.conf;
@@ -160,7 +160,7 @@ exit 0
 \end{lstlisting}
 
 На сервере shared-хостинга на сайтах пользователей находится большое количество уязвимостей, которые часто используются для рассылки спама с сервера.
-Для обнаружения большого числа рассылок с сервера написан плагин для системы мониторинга Nagios, который контролирует число писем в почтовой очереди, а также проверяет наиболее популярные организации (например Spamhaus), которые собирают данные о спам-серверах.
+Для обнаружения большого числа рассылок с сервера был написан плагин для системы мониторинга Nagios, который контролирует число писем в почтовой очереди, а также проверяет наиболее популярные организации (например Spamhaus), которые собирают данные о спам-серверах.
 
 Для просмотра списка очереди используется команда exim -bp или mailq.
 Таким образом можно просмотреть количество писем для разных доменов и их количество:
@@ -184,7 +184,7 @@ Count  Volume  Oldest  Newest  Domain
 \end{lstlisting}
 
 Если сайт действительно заражен, то следует отключить его, оповестить пользователя о закрытии сайта и необходимости избавления от вредоносного кода.
-Также необходимо удалить спам-письма и очереди сообщений:
+Также необходимо удалить спам-письма из очереди сообщений:
 \begin{lstlisting}
 # exiqgrep -b -f 'spamsite.ru' | \
 awk '{print $1}' | xargs exim -Mrm
@@ -201,7 +201,7 @@ awk '{print $1}' | xargs exim -Mrm
 
 \subsection{Сервер виртуализации OpenVZ}
 
-Список существующих в системе контейнеров можно узнать командой vzlist:
+Список всех существующих в системе контейнеров можно узнать командой vzlist -a:
 \begin{lstlisting}
 # vzlist -a
       CTID      NPROC STATUS    IP_ADDR      HOSTNAME
@@ -229,7 +229,7 @@ debian-7.0-x86_64
 ubuntu-14.04-x86_64
 \end{lstlisting}
 
-Каждый контейнер имеет свой конфигурационный файл, который хранится в каталоге /etc/sysconfig/vz-scripts/, именуются эти файлы по CTID контейнера.
+Каждый контейнер имеет свой конфигурационный файл, которые хранятся в каталоге /etc/sysconfig/vz-scripts/, именуются эти файлы по CTID контейнера.
 Например, для контейнера с CTID=101, файл будет называться 101.conf.
 
 При создании контейнера можно использовать типовую конфигурацию для VPS.
@@ -248,17 +248,17 @@ ve-vswap-512m.conf-sample
 \end{lstlisting}
 
 В этих конфигурационных файлах описаны контрольные параметры ресурсов, выделенное дисковое пространство, оперативная память и прочие ресурсы.
-На базе уже существующего фала конфигурации создан типовой файл, подходящий для большинства контейнеров именуемый ve-custom.conf-sample.
+На базе уже существующего файла конфигурации создан типовой файл, подходящий для большинства контейнеров именуемый ve-custom.conf-sample.
 Таким образом, при использовании этого конфигурационного файла, будет создаваться контейнер, которому будет доступен 1 Гб выделенного дискового пространства, 128 Мб оперативной памяти и 128 Мб SWAP.
 В дальнейшем, при создании контейнеров, следует использовать данный конфигурационный файл.
 
-Создание контейнера:
+Создание контейнера осуществляется командой:
 \begin{lstlisting}
 # vzctl create 101 --ostemplate debian-7.0-x86_64 --config custom
 \end{lstlisting}
 где 101 --- CTID контейнера, -{}-ostemplate --- шаблон ОС, -{}-config --- используемый шаблон конфигурационного файла.
 
-Первым запуском контейнера необходимо установить его IP адрес, hostname, указать DNS сервер и задать пароль суперпользователя.
+Перед первым запуском контейнера необходимо установить его IP адрес, hostname, указать DNS сервера и задать пароль суперпользователя.
 Для настройки VPS используется команда vzctl set.
 
 Для того, чтобы контейнер запускался при старте хост-компьютера (например после перезагрузки), необходимо использовать команду:
@@ -266,15 +266,15 @@ ve-vswap-512m.conf-sample
 # vzctl set 101 --onboot yes --save
 \end{lstlisting}
 
-При использовании ключа -{}-save, сохраняются параметры контейнера в соответствующий конфигурационный файл.
+При использовании ключа -{}-save, сохраняются параметры контейнера в соответствующий ему конфигурационный файл.
 
-Аналогично можно задать hostname и IP-адрес:
+Аналогично задается hostname и IP-адрес:
 \begin{lstlisting}
 # vzctl set 101 --hostname site.ru --save
 # vzctl set 101 --ipadd 10.0.0.210 --save
 \end{lstlisting}
 
-Адрес DNS сервера (в большинстве случаев адрес DNS совпадает с адресом хост-компьютера, поэтому можно вместо адреса указать параметр inherit):
+Адреса DNS серверов (в большинстве случаев адрес DNS совпадает с адресом хост-компьютера, поэтому можно вместо адреса указать параметр inherit):
 \begin{lstlisting}
 # vzctl set 101 --nameserver inherit --save
 \end{lstlisting}
@@ -330,7 +330,7 @@ root@site:/#
 Для остановки контейнера используется команда vzctl stop.
 Для полной остановки контейнера, системе требуется немного времени.
 Иногда нужно выключить VPS как можно быстрее, например, если контейнер был подвержен взлому.
-Для того чтобы срочно выключить VPS, нужно использовать ключ -{}-fast:
+Для того чтобы срочно выключить VPS, используется ключ -{}-fast:
 \begin{lstlisting}
 # vzctl stop 101 --fast
 \end{lstlisting}
@@ -429,7 +429,7 @@ tun     1957    0
 # vzctl exec 101 chmod 600 /dev/net/tun
 \end{lstlisting}
 
-Для пользователей в контейнерах доступен брандмауэр IPTables, для его работы в файле /etc/vz/vz.conf должна присутствовать строка:
+Для пользователей в контейнерах доступен брандмауэр Netfilter, для его работы в файле /etc/vz/vz.conf должна присутствовать строка:
 \begin{lstlisting}
 IPTABLES="ipt_owner ipt_REDIRECT ipt_recent ip_tables \
 iptable_filter iptable_mangle ipt_limit ipt_multiport \
@@ -485,7 +485,7 @@ modprobe fuse
 \subsection{Сервер виртуализации KVM}
 
 В целом, администрирование KVM-ноды не отличается от администрирования OpenVZ.
-Однако в случае OpenVZ возможно получить доступ к пользовательскому контейнеру непосредственно с хост-ноды, в случае с KVM это невозможно, это следует учесть при работе с пользователем.
+Однако в случае OpenVZ возможно получить доступ к пользовательскому контейнеру непосредственно с хост-ноды, в случае с KVM это невозможно, это следует учесть при работе с виртуальной машиной.
 Изменение размера диска также является нетривиальной задачей, высок риск краха всей файловой системы без возможности восстановления данных.
 
 Команды, которые чаще всего используются при администрировании виртуальных машин на базе KVM:
@@ -528,7 +528,7 @@ bantime = 86400
 # fail2ban-client set JAIL unbanip IP
 \end{lstlisting}
 
-Пример:
+Пример разблокировки:
 \begin{lstlisting}
 # fail2ban-client set ssh-iptables unbanip 10.0.0.111
 \end{lstlisting}
@@ -580,8 +580,8 @@ Enter password: NEW-PASS
 
 Важно мониторить свободное место на жестком диске сервера резервного копирования и вовремя очищать старые резервные копии.
 
-В DNS серверах используется master-slave репликация, причем один из DNS-серверов, равно как и сервер мониторинга расположены в другом дата-центре для обеспечения отказоустойчивости системы.
-Также между slave-серверами настроена балансировка нагрузки.
+На DNS серверах используется master-slave репликация, причем один из DNS-серверов, равно как и сервер мониторинга расположены в другом дата-центре для обеспечения отказоустойчивости системы.
+Также между подчиненными серверами настроена балансировка нагрузки.
 
 \subsection{Защита от DDoS-атак}
 
@@ -608,7 +608,7 @@ Enter password: NEW-PASS
 
 Важно следить за состоянием RAID на сервере, в случае сбоя одного из дисков, следует обратиться к поддержке дата-центра с просьбой о замене диска.
 
-Необходимо подбираться сложные для перебора пароли, периодически их менять и уведомлять пользователей о смене пароля.
+Необходимо подбирать сложные для перебора пароли, периодически их менять и уведомлять пользователей о смене пароля.
 Для генерации паролей подходит утилита pwgen:
 \begin{lstlisting}
 # pwgen 12 -s1yc
@@ -616,9 +616,9 @@ Y;Xhfu;04A{O
 \end{lstlisting}
 
 Стоит аккуратно работать на сервере под учетной записью root, не стоит запускать неизвестные скрипты или двоичные файлы.
-Необходимо проверять контрольные суммы загруженных программ и следить за цифровой подписью.
+Необходимо проверять контрольные суммы загруженных пакетов и следить за цифровой подписью.
 
-Не следует просто так перезагружать сервер, рекомендуется это делать только в случаях чрезвычайной необходимости.
+Не следует просто так перезагружать сервер, рекомендуется это делать только в случаях чрезвычайной необходимости (например обновление ядра).
 
 Всегда стоит проверять наличие актуальных резервных копий, а также свободное место на системах хранения данных.
 Стоит также настроить ротацию логов, это позволит сэкономить место на диске.
