--- a/inc/b-app.tex
+++ b/inc/b-app.tex
@@ -1,5 +1,5 @@
 \appsection{Приложение Б}
-\centering{\uppercase{Руководство пользователя}} \\
+\centering{\uppercase{Руководство пользователя}}
 \vspace{\baselineskip}
 
 \addimgapp{1-welcome}{Рис. Б.1 --- Список тарифов на сайте}
