--- a/inc/preamble.tex
+++ b/inc/preamble.tex
@@ -17,7 +17,7 @@
 \defaultfontfeatures{Ligatures=TeX}
 \setmainfont{Times New Roman} % Нормоконтроллеры хотят именно его
 \newfontfamily\cyrillicfont{Times New Roman}
-%\setsansfont{Liberation Sans} % Тут я его не использую, но если пригодится...
+%\setsansfont{Liberation Sans} % Тут я его не использую, но если пригодится
 \setmonofont{FreeMono} % Моноширинный шрифт для оформления кода
 
 % Русский язык
