--- a/main.tex
+++ b/main.tex
@@ -11,6 +11,7 @@
 
 %\includepdf{pz} % Пояснительная записка
 %\includepdf[pages={1,2}]{task} % Задание на диплом печатается на одном листе с двух сторон
+%помимо ПЗ и задания, в диплом также вкладывается отзыв руководителя и рецензия
 
 \tableofcontents % Содержание 
 \clearpage
@@ -31,7 +32,7 @@
 \input{inc/a-app} % Исходный код скрипта DDoS Deflate
 \input{inc/b-app} % Руководство пользователя
 
-%\includepdf{act} % Акт внедрения
+\includepdf{act} % Акт внедрения
 
 \end{document}
 %%% Конец документа
