--- a/inc/0-conclusion.tex
+++ b/inc/0-conclusion.tex
@@ -16,6 +16,6 @@
 Обновление аппаратной части инфраструктуры также увеличит производительность, однако данные действия требуют существенных материальных затрат.
 
 При анализе безопасности и применении мер по ее обеспечении были использованы и дописаны такие скрипты как DDoS Deflate, который является эффективным решением защиты от небольших DDoS-атак.
-Скрипт не является законченным продуктом и распространяются под свободной лицензией.
+Скрипт не является законченным продуктом и распространяется под свободной лицензией.
 
 \clearpage
