--- a/inc/5-adminguide.tex
+++ b/inc/5-adminguide.tex
@@ -1,6 +1,6 @@
 \section{Руководство администратора}
 
-Руководство администратора содержит инфорамацию о сетевой инфраструктуре, используемых технологиях виртуализации и программном обеспечении.
+Руководство администратора содержит информацию о сетевой инфраструктуре, используемых технологиях виртуализации и программном обеспечении.
 
 \subsection{Расположение серверов в сетевой инфраструктуре}
 Во всей инфраструктуре на физических серверах первого дата-центра располагаются:
